--- a/functions/package.json
+++ b/functions/package.json
@@ -10,11 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
     "actions-on-google": "^2.7.0",
-    "firebase-admin": "~7.0.0",
+    "firebase": "^6.4.2",
+    "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.3.0"
   },
   "devDependencies": {
